@@ -1,3 +1,12 @@
+2008-07-26  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on a patch by: Denis Washington <denisw@svn.gnome.org>
+
+	* gnome-keybinding-properties.c: (binding_name), (show_error),
+	(accel_edited_callback): when trying to assign a shortcut that is
+	already in use, ask the user whether to reassign it instead of
+	refusing to do anything (bug #133318)
+
 2008-06-21  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Matthias Clasen <mclasen@redhat.com>
